--- a/Real_Estate_Web_Application/backend/.env
+++ b/Real_Estate_Web_Application/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://127.0.0.1:27017/realestatedb
+MONGO_URL=mongodb+srv://cherukurinaveen036:aAPx4jDiW5aauXjW@cluster0.somydsa.mongodb.net/realestatedb
 
 JWT_SECRET='123456'
